--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "backend for chess app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node app.ts",
+    "dev": "ts-node-dev app.ts",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.22",
+    "express": "^4.17.3",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.16.0",
@@ -22,6 +28,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   }
 }
