--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.22",
+    "@types/ws": "^8.5.3",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.7",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.16.0",
