--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.22",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crochess-api": "^1.2.3",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.0",
@@ -25,6 +27,7 @@
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/source-map-support": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
