--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "backend for chess app",
   "main": "app.ts",
+  "engines": {
+    "node": "16.15.0",
+    "npm":"8.5.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node app.ts",
