--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.ts",
   "engines": {
     "node": "16.15.0",
-    "npm":"8.5.5"
+    "npm": "8.5.5"
   },
   "scripts": {
+    "heroku-prebuild": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node app.ts",
     "dev": "ts-node-dev app.ts",
