--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "8.5.5"
   },
   "scripts": {
-    "heroku-prebuild": "npm i",
+    "heroku-prebuild": "npm i --only=dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node app.ts",
     "dev": "ts-node-dev app.ts",
