--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 URI = mongodb+srv://admin:ACDC@cluster0.br97p.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+FRONTEND_URL_DEV = 'http://localhost:3000'
+FRONTEND_URL_PRODUCTION = 'https://crochess-frontend.herokuapp.com'
